<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Contacts &amp; Calendars</string>
    <string name="menu_settings">Settings</string>
    <string name="app_title">Accounts</string>

    <string-array name="http_protocols">
        <item>http://</item>
        <item>https://</item>
    </string-array>
    <string-array name="server_names">
        <item>Google</item>
        <!-- <item>Apple</item> -->
        <item>Yahoo</item>
        <item>iCloud</item>
        <!-- <item>https://</item> -->
    </string-array>

    <string name="http_warning">"If you don't use encryption (HTTPS), other people may easily intercept your login details, contacts and events."</string>
    <string-array name="main_activity_actions">
        <item>Add account</item>
        <item>Manage accounts</item>
    </string-array>

    <string name="user_name">User name:</string>
    <string name="password">Password:</string>
    <string name="root_url">Root URL (collections will be auto-detected):</string>
    <string name="token">Token:</string>
    <string name="next">Next</string>
    <string name="next_action">Next</string>
    <string name="done_action">Done</string>
    <string name="message_cancel_text">Back</string>
    <string name="help">Help</string>
    <string name="invalid_base_url">Invalid base URL: </string>
    <string name="title_select_collections">DAVdroid: Select collections</string>
    <string name="exception_account">Failed to retrieve account</string>
    <string name="exception_token">Failed to retrieve AuthToken</string>
    <string name="exception_dav_addressbook">Failed to retrieve address book</string>
    <string name="exception_dav_calendar">Failed to retrieve calendars</string>
    <string name="exception_io">I/O error: %s</string>
    <string name="exception_uri_syntax">Invalid URI: %s</string>
    <string name="exception_incapable_resource">Missing capabilities: %s</string>
    <string name="neither_caldav_nor_carddav">Neither CalDAV nor CardDAV available</string>
    <string name="no_carddav">No CardDAV support available</string>
    <string name="no_caldav">No CalDAV support available</string>
    <string name="error_principal_path">"Couldn't determine principal path (RFC 5397)"</string>
    <string name="error_home_set_address_books">"Couldn't determine address book home set"</string>
    <string name="error_home_set_calendars">"Couldn't determine calendar home set"</string>
    <string name="add_account">Add account</string>
    <string name="add_action">Add Account</string>
    <string name="finish_action">Finish</string>
    <string name="querying_server">Querying server. Please wait…</string>
    <string name="exception_http">HTTP error: %s</string>
    <string name="what_to_sync">Select collections</string>
    <string name="address_books">Address books</string>
    <string name="calendars">Calendars</string>
    <string name="select_address_book">Select up to one address book (tap again to unselect):</string>
    <string name="select_calendars">Select your calendars:</string>
    <string name="auth_preemptive">Preemptive authentication (recommended, but incompatible with Digest auth)</string>
    <string name="account_creation_success">Account added successfully</string>
    
    <string name="davdroid_help">DAVdroid Help</string>
    <string name="show_sync_settings">Manage sync accounts</string>
    <string name="show_website">DAVdroid Web site</string>
    <string name="html_main_workaround"><![CDATA[
		<p>Thank you for buying DAVdroid via Google Play and thus supporting the project. Unfortunately, there are two issues with Google Play:</p>
		
		<h2>1. Accounts may be gone after a reboot</h2>
		<p>You may encounter the problem that all your <strong>DAVdroid accounts (including contacts and events) are gone
        after rebooting your device</strong>. The reason is a <a href="https://code.google.com/p/android/issues/detail?id=34880">bug in Android</a>
        that causes accounts of paid apps to be removed on start-up because the (encrypted) APK files are
        loaded <i>after</i> checking for orphaned accounts.</p>
        <p>Affected users:<br/>
        * all Android 4.1 users who have got DAVdroid from Play Store;<br/>
        * Android 4.2 users who have got DAVdroid from Play Store only with certain devices (for instance, most Samsung devices)</p>
        
        <h2>2. Accounts may be gone after upgrading DAVdroid</h2>
        <p>You may encounter the problem that all your <strong>DAVdroid accounts (including contacts and events) when Play Store
        updates DAVdroid</strong>. The reason is <a href="https://code.google.com/p/android/issues/detail?id=66905">another bug in Android</a>
        that causes accounts of paid apps to be removed when upgrading for a similar reason.</p>
        <p>Affected users: some Android 4.4.2 users who have got DAVdroid from Play Store (known for Nexus devices and Moto G)</p>
        
        <p><strong>If you\'re affected by one of these bugs, please <a href="market://details?id=at.bitfire.davdroid.jbworkaround">install the
        DAVdroid JB Workaround</a>.</strong></p>
    ]]></string>
    <string name="html_main_info"><![CDATA[
       <h1>Welcome to DAVdroid/%s!</h1>
       
       <p>DAVdroid is an Android 4+ sync adapter for CalDAV/CardDAV. To use it, just add a DAVdroid account
       for your CalDAV/CardDAV server and your contacts/events will be synchronized in both directions.</p>
       
       <p>For more information, please see the <a href="http://davdroid.bitfire.at?pk_campaign=davdroid-app&amp;pk_kwd=main-activity">DAVdroid homepage</a>.
       There\'s a <a href="http://davdroid.bitfire.at/configuration?pk_campaign=davdroid-app&amp;pk_kwd=main-activity">Setup guide</a>, too. DAVdroid respects
       your privacy, see our <a href="http://davdroid.bitfire.at/privacy?pk_campaign=davdroid-app&amp;pk_kwd=main-activity">Privacy Policy</a>.</p>
       
       <p>If you use CyanogenMod, "Privacy Guard" must be disabled for DAVdroid. Otherwise, DAVdroid is not allowed to access
       and synchronize your contacts and events.</p>
       
       <p><b>In case of problems, please read the <a href="http://davdroid.bitfire.at/configuration?pk_campaign=davdroid-app&amp;pk_kwd=main-activity">FAQ</a> first.
       If you encounter a bug that is clearly related to DAVdroid, enter it on
       <a href="https://github.com/rfc2822/davdroid">Github issues</a> instead of contacting us directly or giving a poor
       rating for the app.</b></p>
              
	   <h1>Open-source</h1>
	   <p>DAVdroid is designed to be an open-source project from the very first beginning. It is always possible to compile the
	   app yourself and use it for free without any obligations. The source code is
	   <a href="https://github.com/rfc2822/davdroid">available on Github</a>, and you can
	   <a href="https://f-droid.org/app/at.bitfire.davdroid">download the app on F-droid</a>.</p>
	   
	   <p>However, it was much work to create this app, so we have decided to put it into the commercial stores for a small fee.
	   If you want to support this project, please consider <a href="http://davdroid.bitfire.at/donate?pk_campaign=davdroid-app&amp;pk_kwd=main-activity">donating to DAVdroid</a>
	   or purchasing it.</p>
	   
	   <h1>License</h1>
	   <p>Copyright (c) 2013 – 2014 Richard Hirner (<a href="http://www.bitfire.at">bitfire web engineering</a>). All rights reserved.
	   This program and the accompanying materials are made available under the terms of the GNU Public License v3.0 which
	   accompanies this distribution, and is available at <a
	   href="http://www.gnu.org/licenses/gpl.html">http://www.gnu.org/licenses/gpl.html</a>. As far as Google Play, Samsung
	   Store, AndroidPit App Center or Amazon Appstore require other terms, the respective terms apply for versions
	   that are downloaded via these services.</p>
	   
	   <p>Translations: Catalanian by <a href="https://github.com/pokoli">@pokoli</a>, French by unknown contributor,
	   Spanish by <a href="https://github.com/xphnx">@xphnx</a></p>
	   
	   <h2>Used third-party libraries</h2>
	   <p>
	    * <a href="http://hc.apache.org">Apache HttpClient</a> (<a href="https://code.google.com/p/httpclientandroidlib/">httpclientandroidlib</a> flavour) – <a href="http://www.apache.org/licenses/">Apache License, Version 2.0</a><br/>
	   	* <a href="http://ical4j.sourceforge.net/">iCal4j<a> – <a href="http://sourceforge.net/p/ical4j/ical4j/ci/default/tree/LICENSE">New BSD License</a>)<br/>
	   	* <a href="https://code.google.com/p/ez-vcard/">ez-vcard</a> – <a href="http://opensource.org/licenses/BSD-3-Clause">New BSD License</a><br/>
	   	* <a href="http://simple.sourceforge.net/">Simple XML Serialization</a> – <a href="http://www.apache.org/licenses/LICENSE-2.0">Apache License, Version 2.0</a><br/>
	   	* <a href="http://projectlombok.org/">Project Lombok</a> – <a href="http://opensource.org/licenses/mit-license.php">MIT License</a></p>
    ]]></string>
    
    <string name="account_details">Account details</string>
    <string name="account_name">Account name:</string>
    <string name="account_name_hint">Account Name</string>
    <string name="user_name_hint">User Name</string>
    <string name="user_password_hint">Password</string>
    <string name="user_name_desc">Enter username</string>
    <string name="user_password_desc">Enter password</string>
    <string name="url_hint">Webdav URL</string>
    <string name="email_address">Email address:</string>
    <string name="organizer_hint">"ORGANIZER of your events; required if you use attendee info"</string>
    <string name="account_name_info">"Use your email address as account name because Android will use the account name as ORGANIZER field for events you create. You can't have two accounts with the same name.</string>
    <string name="read_only">read-only</string>
    <string name="connect_to_network">Please connect to internet to add an account</string>
    <string name="no_network">Network error</string>
    <string name="no_token">Token error</string>
    <string name="network_dialog_back">Back</string>
    <string name="error_empty_account_name">Account name cannot be blank</string>
    <string name="error_account_name_exist">Account with same name already added</string>
    
    <string name="general_settings">General settings</string>
    <string name="debug_settings">Debug settings</string>
    <string name="disable_http_compression">Disable HTTP compression</string>
    <string name="http_compression_disabled">HTTP compression is disabled (debug mode)</string>
    <string name="http_compression_enabled">HTTP compression is used whenever possible</string>
    <string name="network_logging">Log network traffic</string>
    <string name="network_logging_enabled">All network traffic is being logged verbosely (debug mode)</string>
    <string name="network_logging_disabled">Network traffic is not being logged</string>
    <string name="report_an_issue">Report an issue</string>

    <string name="account_name_empty">Couldn\'t create account, account name empty</string>
    <string name="account_already_exists">Couldn\'t create account (account with this name already existing?)</string>
    <string name="id_or_password_missing">User Name or Password empty</string>
    <string name="show_password">Show password</string>
    <string name="oauth_token_error">Failed to retrieve Authorization Token</string>
    
</resources>
