<?xml version="1.0" encoding="utf-8"?>
<com.iamplus.aware.AwareSlidingLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/slidinglayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical"
    android:positiveButtonText="@string/next_action"
    android:positiveButtonVisibility="visible"
    android:negativeButtonText="@string/message_cancel_text"
    android:negativeButtonVisibility="visible" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >
        
        <EditText
	        android:id="@+id/user_name"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:ems="10"
        	android:hint="@string/user_name_hint"
	        android:inputType="textPersonName" >
	
	        <requestFocus />
	    </EditText>
	
	    <EditText
	        android:id="@+id/password"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:ems="10"
        	android:hint="@string/user_password_hint"
	        android:inputType="textPassword" />
	    
    </LinearLayout>

</com.iamplus.aware.AwareSlidingLayout>
