<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:scrollbars="vertical" >

    <GridLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:columnCount="3"
        android:padding="10dp"
        android:useDefaultMargins="true" >

        <TextView
            android:layout_columnSpan="3"
            android:layout_gravity="left"
            android:layout_marginBottom="20dp"
            android:text="@string/account_details"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:layout_gravity="left"
            android:text="@string/account_name"
            android:textAppearance="?android:attr/textAppearanceMedium" />


        <Space
            android:layout_gravity="left|top"
            android:layout_row="3" />

        <EditText
            android:id="@+id/account_name"
            android:layout_column="0"
            android:layout_gravity="left|top"
            android:layout_row="2"
            android:ems="10"
            android:hint="@string/account_name_hint"
            android:inputType="textEmailAddress" />

    </GridLayout>

</ScrollView>